# openmetadata-ingestion

./: golden-tinkering-liskov.md  pyproject.toml
docs/: CONFIGURATION_GUIDE.md  QUICK_START.md  README.md
src/om_ingest/config/: loader.py  schema.py  template_engine.py
src/om_ingest/core/: __init__.py  client.py  context.py  dependency_resolver.py  engine.py  executor.py  schema_comparator.py
src/om_ingest/entities/: __init__.py  base.py  registry.py
src/om_ingest/entities/database/: __init__.py  database.py  database_service.py  schema.py  table.py
src/om_ingest/entities/ml/: __init__.py  ml_model.py  ml_model_service.py
src/om_ingest/sources/: __init__.py  base.py  registry.py
src/om_ingest/sources/mlflow/: __init__.py  connector.py
src/om_ingest/sources/s3_hudi/: README.md  __init__.py  connector.py
src/om_ingest/strategies/: __init__.py  error_handling.py  idempotency.py
