[project]
name = "om-ingest"
version = "0.1.0"
description = "YAML-driven OpenMetadata entity ingestion library for flexible metadata management"
readme = "README.md"
authors = [
    { name = "brayanjuls", email = "brayan1213@gmail.com" }
]
requires-python = ">=3.11.3"
dependencies = [
    # Core dependencies
    "openmetadata-ingestion>=1.3.0",
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    # Source connectors
    "boto3",
    "opensearch-py",
    "apache-airflow-client",
    "mlflow",
    "kafka-python",
    "sqlalchemy",
    "psycopg2-binary",
    # Profiling
    "pandas>=2.0",
    "numpy",
]

[project.scripts]
om-ingest = "om_ingest.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "moto[s3]",
    "ruff",
    "black",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
